@@ -12,6 +12,19 @@ defined( 'ABSPATH' ) || exit;
  */
 class WC_REST_Payments_Settings_Controller extends WC_Payments_REST_Controller {
 
+	const ACCOUNT_FIELDS_TO_UPDATE = [
+		'account_statement_descriptor',
+		'account_business_name',
+		'account_business_url',
+		'account_business_support_address',
+		'account_business_support_email',
+		'account_business_support_phone',
+		'account_branding_logo',
+		'account_branding_icon',
+		'account_branding_primary_color',
+		'account_branding_secondary_color',
+	];
+
 	/**
 	 * Endpoint path.
 	 *
@@ -105,6 +118,43 @@ class WC_REST_Payments_Settings_Controller extends WC_Payments_REST_Controller {
 						'type'              => 'string',
 						'validate_callback' => [ $this, 'validate_statement_descriptor' ],
 					],
+					'account_business_name'             => [
+						'description' => __( 'The customer-facing business name.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_business_url'              => [
+						'description' => __( 'The business’s publicly available website.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_business_support_address'  => [
+						'description'       => __( 'A publicly available mailing address for sending support issues to.', 'woocommerce-payments' ),
+						'type'              => 'object',
+						'validate_callback' => [ $this, 'validate_business_support_address' ],
+					],
+					'account_business_support_email'    => [
+						'description' => __( 'A publicly available email address for sending support issues to.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_business_support_phone'    => [
+						'description' => __( 'A publicly available phone number to call with support issues.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_branding_logo'             => [
+						'description' => __( 'A logo id for the account that will be used in Checkout', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_branding_icon'             => [
+						'description' => __( 'An icon for the account.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_branding_primary_color'    => [
+						'description' => __( 'A CSS hex color value representing the primary branding color for this account.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
+					'account_branding_secondary_color'  => [
+						'description' => __( 'A CSS hex color value representing the secondary branding color for this account.', 'woocommerce-payments' ),
+						'type'        => 'string',
+					],
 					'is_payment_request_enabled'        => [
 						'description'       => __( 'If WooCommerce Payments express checkouts should be enabled.', 'woocommerce-payments' ),
 						'type'              => 'boolean',
@@ -181,6 +231,32 @@ class WC_REST_Payments_Settings_Controller extends WC_Payments_REST_Controller {
 	}
 
 	/**
+	 * Validate the business support address.
+	 *
+	 * @param array           $value The value being validated.
+	 * @param WP_REST_Request $request The request made.
+	 * @param string          $param The parameter name, used in error messages.
+	 * @return true|WP_Error
+	 */
+	public function validate_business_support_address( array $value, WP_REST_Request $request, string $param ) {
+		$string_validation_result = rest_validate_request_arg( $value, $request, $param );
+		if ( true !== $string_validation_result ) {
+			return $string_validation_result;
+		}
+
+		foreach ( $value as $field => $field_value ) {
+			if ( ! in_array( $field, [ 'city', 'country', 'line1', 'line2', 'postal_code', 'state' ], true ) ) {
+				return new WP_Error(
+					'rest_invalid_pattern',
+					'Invalid address format!'
+				);
+			}
+		}
+
+		return true;
+	}
+
+	/**
 	 * Retrieve settings.
 	 *
 	 * @return WP_REST_Response
@@ -200,6 +276,15 @@ class WC_REST_Payments_Settings_Controller extends WC_Payments_REST_Controller {
 				'is_wcpay_subscriptions_eligible'   => WC_Payments_Features::is_wcpay_subscriptions_eligible(),
 				'is_subscriptions_plugin_active'    => $this->wcpay_gateway->is_subscriptions_plugin_active(),
 				'account_statement_descriptor'      => $this->wcpay_gateway->get_option( 'account_statement_descriptor' ),
+				'account_business_name'             => $this->wcpay_gateway->get_option( 'account_business_name' ),
+				'account_business_url'              => $this->wcpay_gateway->get_option( 'account_business_url' ),
+				'account_business_support_address'  => $this->wcpay_gateway->get_option( 'account_business_support_address' ),
+				'account_business_support_email'    => $this->wcpay_gateway->get_option( 'account_business_support_email' ),
+				'account_business_support_phone'    => $this->wcpay_gateway->get_option( 'account_business_support_phone' ),
+				'account_branding_logo'             => $this->wcpay_gateway->get_option( 'account_branding_logo' ),
+				'account_branding_icon'             => $this->wcpay_gateway->get_option( 'account_branding_icon' ),
+				'account_branding_primary_color'    => $this->wcpay_gateway->get_option( 'account_branding_primary_color' ),
+				'account_branding_secondary_color'  => $this->wcpay_gateway->get_option( 'account_branding_secondary_color' ),
 				'is_payment_request_enabled'        => 'yes' === $this->wcpay_gateway->get_option( 'payment_request' ),
 				'is_debug_log_enabled'              => 'yes' === $this->wcpay_gateway->get_option( 'enable_logging' ),
 				'payment_request_enabled_locations' => $this->wcpay_gateway->get_option( 'payment_request_button_locations' ),
@@ -225,11 +310,11 @@ class WC_REST_Payments_Settings_Controller extends WC_Payments_REST_Controller {
 		$this->update_is_debug_log_enabled( $request );
 		$this->update_is_multi_currency_enabled( $request );
 		$this->update_is_wcpay_subscriptions_enabled( $request );
-		$this->update_account_statement_descriptor( $request );
 		$this->update_is_payment_request_enabled( $request );
 		$this->update_payment_request_enabled_locations( $request );
 		$this->update_payment_request_appearance( $request );
 		$this->update_is_saved_cards_enabled( $request );
+		$this->update_account( $request );
 
 		return new WP_REST_Response( [], 200 );
 	}
@@ -392,18 +477,17 @@ class WC_REST_Payments_Settings_Controller extends WC_Payments_REST_Controller {
 	}
 
 	/**
-	 * Updates WooCommerce Payments account statement descriptor.
+	 * Updates WooCommerce Payments account fields
 	 *
 	 * @param WP_REST_Request $request Request object.
 	 */
-	private function update_account_statement_descriptor( WP_REST_Request $request ) {
-		if ( ! $request->has_param( 'account_statement_descriptor' ) ) {
-			return;
-		}
-
-		$account_statement_descriptor = $request->get_param( 'account_statement_descriptor' );
-
-		$this->wcpay_gateway->update_option( 'account_statement_descriptor', $account_statement_descriptor );
+	private function update_account( WP_REST_Request $request ) {
+		$updated_fields_callback = function ( $value, string $key ) {
+			return in_array( $key, static::ACCOUNT_FIELDS_TO_UPDATE, true ) &&
+					$this->wcpay_gateway->get_option( $key ) !== $value;
+		};
+		$updated_fields          = array_filter( $request->get_params(), $updated_fields_callback, ARRAY_FILTER_USE_BOTH );
+		$this->wcpay_gateway->update_account_settings( $updated_fields );
 	}
 
 	/**
